@@ -29,6 +29,8 @@ $ -> Language fix or change
 18-Jun-2012 Jean-Marie Simonet
  # [#28685] Edit article Button missing after upgrade to the latest version 2.5.5 from 2.5.4. Thanks Mark
  $ [#28695] *Lang string missing
+ # [#28694] *Delete toolbar broken in com_media in 2.5.5
+ # [#28702] 404 Hits of com_redirect fails after Manual update. Thanks Mark
 
 18-June-2012 Mark Dexter
  + Add update xml files to build folder
